--- a/week2/SeSACWeek3/SeSACWeek3/Assignment/Setting.storyboard
+++ b/week2/SeSACWeek3/SeSACWeek3/Assignment/Setting.storyboard
@@ -286,7 +286,7 @@
                                 <rect key="frame" x="0.0" y="157" width="393" height="661"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="todoCell" rowHeight="55" id="Pr3-IH-gAs" customClass="Case3TableViewCell" customModule="SeSACWeek3" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Case3TableViewCell" rowHeight="55" id="Pr3-IH-gAs" customClass="Case3TableViewCell" customModule="SeSACWeek3" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="50" width="393" height="55"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Pr3-IH-gAs" id="sGf-R2-cQ6">
