--- a/week3/BookWorm/BookWorm/BookshelfCollectionViewCell.xib
+++ b/week3/BookWorm/BookWorm/BookshelfCollectionViewCell.xib
@@ -11,81 +11,65 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="BookshelfCollectionViewCell" id="gTV-IL-0wX" customClass="BookshelfCollectionViewCell" customModule="BookWorm" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="211" height="324"/>
+            <rect key="frame" x="0.0" y="0.0" width="211" height="363"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="211" height="324"/>
+                <rect key="frame" x="0.0" y="0.0" width="211" height="363"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wJy-6c-3JA">
-                        <rect key="frame" x="10" y="10.000000000000014" width="191" height="248.33333333333337"/>
-                        <constraints>
-                            <constraint firstAttribute="width" secondItem="wJy-6c-3JA" secondAttribute="height" multiplier="1:1.3" id="Pb4-jY-786"/>
-                        </constraints>
-                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="영화제목" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ibJ-Cv-juF">
-                        <rect key="frame" x="76" y="263.33333333333331" width="59" height="25.333333333333314"/>
+                        <rect key="frame" x="0.0" y="280" width="59" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="RA9-mY-kAe"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w5d-41-Jzh">
-                        <rect key="frame" x="35" y="293.66666666666669" width="141" height="20.333333333333314"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="개봉일" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YsG-hy-sKG">
-                                <rect key="frame" x="0.0" y="0.0" width="44.333333333333336" height="20.333333333333332"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="|" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pi2-rw-Uev">
-                                <rect key="frame" x="44.333333333333329" y="0.0" width="4" height="20.333333333333332"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="상영시간" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zz5-J4-OL4">
-                                <rect key="frame" x="48.333333333333329" y="0.0" width="59" height="20.333333333333332"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="|" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uoj-He-bOG">
-                                <rect key="frame" x="107.33333333333334" y="0.0" width="4" height="20.333333333333332"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="평점" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7qH-tL-Cyl">
-                                <rect key="frame" x="111.33333333333334" y="0.0" width="29.666666666666657" height="20.333333333333332"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                    </stackView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="상영시간 | 평점" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gu1-kF-dCg">
+                        <rect key="frame" x="0.0" y="313" width="101" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="yP4-aZ-suK"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="개봉일" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CBF-LT-PaK">
+                        <rect key="frame" x="0.0" y="337" width="45" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="NDu-AD-CLS"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wJy-6c-3JA">
+                        <rect key="frame" x="0.0" y="0.0" width="211" height="272.33333333333331"/>
+                    </imageView>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
-                <constraint firstItem="wJy-6c-3JA" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="3Wu-tf-HWd"/>
-                <constraint firstAttribute="bottom" secondItem="w5d-41-Jzh" secondAttribute="bottom" constant="10" id="8cl-iW-2wm"/>
-                <constraint firstAttribute="trailing" secondItem="wJy-6c-3JA" secondAttribute="trailing" constant="10" id="Pmm-GL-bxV"/>
-                <constraint firstItem="wJy-6c-3JA" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="R2c-cC-aqr"/>
-                <constraint firstItem="ibJ-Cv-juF" firstAttribute="top" secondItem="wJy-6c-3JA" secondAttribute="bottom" constant="5" id="UVh-AS-tjR"/>
-                <constraint firstItem="ibJ-Cv-juF" firstAttribute="centerX" secondItem="ZTg-uK-7eu" secondAttribute="centerX" id="ft9-7k-5jn"/>
-                <constraint firstItem="w5d-41-Jzh" firstAttribute="top" secondItem="ibJ-Cv-juF" secondAttribute="bottom" constant="5" id="kDU-fg-aoB"/>
-                <constraint firstItem="w5d-41-Jzh" firstAttribute="centerX" secondItem="ZTg-uK-7eu" secondAttribute="centerX" id="pV6-Sv-oTa"/>
+                <constraint firstAttribute="bottom" secondItem="CBF-LT-PaK" secondAttribute="bottom" constant="5" id="0WD-r3-3qv"/>
+                <constraint firstItem="wJy-6c-3JA" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="3Wu-tf-HWd"/>
+                <constraint firstAttribute="trailing" secondItem="wJy-6c-3JA" secondAttribute="trailing" id="Pmm-GL-bxV"/>
+                <constraint firstItem="wJy-6c-3JA" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="R2c-cC-aqr"/>
+                <constraint firstItem="gu1-kF-dCg" firstAttribute="leading" secondItem="wJy-6c-3JA" secondAttribute="leading" id="TCD-iA-Nhn"/>
+                <constraint firstItem="wJy-6c-3JA" firstAttribute="height" secondItem="gTV-IL-0wX" secondAttribute="height" multiplier="0.75" id="Ypd-2u-opf"/>
+                <constraint firstItem="CBF-LT-PaK" firstAttribute="top" secondItem="gu1-kF-dCg" secondAttribute="bottom" constant="3" id="ieP-tK-YGt"/>
+                <constraint firstItem="CBF-LT-PaK" firstAttribute="leading" secondItem="wJy-6c-3JA" secondAttribute="leading" id="kMH-Ou-2Mk"/>
+                <constraint firstItem="gu1-kF-dCg" firstAttribute="top" secondItem="ibJ-Cv-juF" secondAttribute="bottom" constant="3" id="nQX-Ns-9tD"/>
+                <constraint firstItem="ibJ-Cv-juF" firstAttribute="leading" secondItem="wJy-6c-3JA" secondAttribute="leading" id="qGe-WS-HrR"/>
             </constraints>
-            <size key="customSize" width="211" height="324"/>
+            <size key="customSize" width="211" height="363"/>
             <connections>
                 <outlet property="moviePosterImageView" destination="wJy-6c-3JA" id="sfE-Ta-g5P"/>
                 <outlet property="movieTitleLabel" destination="ibJ-Cv-juF" id="cPD-HV-csu"/>
-                <outlet property="rateLabel" destination="7qH-tL-Cyl" id="2cx-vs-tMh"/>
-                <outlet property="releaseDateLabel" destination="YsG-hy-sKG" id="0Ea-qJ-33s"/>
-                <outlet property="runtimeLabel" destination="Zz5-J4-OL4" id="YJC-jw-igl"/>
+                <outlet property="releaseDateLabel" destination="CBF-LT-PaK" id="dnR-po-9lb"/>
+                <outlet property="runtimeAndRateLabel" destination="gu1-kF-dCg" id="c9e-QQ-db9"/>
             </connections>
-            <point key="canvasLocation" x="187.02290076335876" y="140.84507042253523"/>
+            <point key="canvasLocation" x="187.02290076335876" y="153.16901408450704"/>
         </collectionViewCell>
     </objects>
 </document>
