--- a/week3/BookWorm/BookWorm/Base.lproj/Main.storyboard
+++ b/week3/BookWorm/BookWorm/Base.lproj/Main.storyboard
@@ -37,6 +37,33 @@
             </objects>
             <point key="canvasLocation" x="2789" y="-35"/>
         </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="Hag-yK-auX">
+            <objects>
+                <viewController storyboardIdentifier="DetailViewController" id="Vu7-Gq-AXB" customClass="DetailViewController" customModule="BookWorm" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="CMV-kr-Oip">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="상세 화면" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P2h-DD-w15">
+                                <rect key="frame" x="134" y="418" width="125" height="41"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="dUt-U0-nQp"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="P2h-DD-w15" firstAttribute="centerY" secondItem="dUt-U0-nQp" secondAttribute="centerY" id="r89-LG-ImG"/>
+                            <constraint firstItem="P2h-DD-w15" firstAttribute="centerX" secondItem="dUt-U0-nQp" secondAttribute="centerX" id="yYJ-dB-ozt"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="U3d-3t-Cer" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2789" y="671"/>
+        </scene>
         <!--Bookshelf Collection View Controller-->
         <scene sceneID="5Jm-M4-NUT">
             <objects>
