--- a/week2/SeSACWeek3/SeSACWeek3/Base.lproj/Main.storyboard
+++ b/week2/SeSACWeek3/SeSACWeek3/Base.lproj/Main.storyboard
@@ -382,9 +382,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" id="FzL-v3-KUH">
+                            <rect key="frame" x="0.0" y="0.0" width="393" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="aDt-lz-AOW" id="y2q-SX-LWN"/>
+                            </connections>
+                        </searchBar>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CustomTableViewCell" rowHeight="75" id="LVc-0k-5Ml" customClass="CustomTableViewCell" customModule="SeSACWeek3" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="50" width="393" height="75"/>
+                                <rect key="frame" x="0.0" y="94" width="393" height="75"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="LVc-0k-5Ml" id="Pf6-vF-a2F">
                                     <rect key="frame" x="0.0" y="0.0" width="393" height="75"/>
@@ -466,6 +474,9 @@
                             <outlet property="delegate" destination="aDt-lz-AOW" id="fLZ-yE-fV1"/>
                         </connections>
                     </tableView>
+                    <connections>
+                        <outlet property="searchBar" destination="FzL-v3-KUH" id="cky-GE-mRf"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ohR-Zy-rtc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
