--- a/week3/BookWorm/BookWorm/BookshelfCollectionViewCell.xib
+++ b/week3/BookWorm/BookWorm/BookshelfCollectionViewCell.xib
@@ -17,6 +17,9 @@
                 <rect key="frame" x="0.0" y="0.0" width="211" height="363"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wJy-6c-3JA">
+                        <rect key="frame" x="0.0" y="0.0" width="211" height="272.33333333333331"/>
+                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="영화제목" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ibJ-Cv-juF">
                         <rect key="frame" x="0.0" y="280" width="59" height="30"/>
                         <constraints>
@@ -44,9 +47,16 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wJy-6c-3JA">
-                        <rect key="frame" x="0.0" y="0.0" width="211" height="272.33333333333331"/>
-                    </imageView>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lUf-99-bNv">
+                        <rect key="frame" x="176" y="328" width="30" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="30" id="BiL-e8-3vO"/>
+                            <constraint firstAttribute="width" secondItem="lUf-99-bNv" secondAttribute="height" multiplier="1:1" id="Weo-96-uzC"/>
+                            <constraint firstAttribute="height" constant="30" id="w7H-oA-bCr"/>
+                        </constraints>
+                        <state key="normal" title="Button"/>
+                        <buttonConfiguration key="configuration" style="plain" image="heart" catalog="system"/>
+                    </button>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
@@ -58,12 +68,15 @@
                 <constraint firstItem="gu1-kF-dCg" firstAttribute="leading" secondItem="wJy-6c-3JA" secondAttribute="leading" id="TCD-iA-Nhn"/>
                 <constraint firstItem="wJy-6c-3JA" firstAttribute="height" secondItem="gTV-IL-0wX" secondAttribute="height" multiplier="0.75" id="Ypd-2u-opf"/>
                 <constraint firstItem="CBF-LT-PaK" firstAttribute="top" secondItem="gu1-kF-dCg" secondAttribute="bottom" constant="3" id="ieP-tK-YGt"/>
+                <constraint firstAttribute="trailing" secondItem="lUf-99-bNv" secondAttribute="trailing" constant="5" id="jxg-Gg-xmo"/>
                 <constraint firstItem="CBF-LT-PaK" firstAttribute="leading" secondItem="wJy-6c-3JA" secondAttribute="leading" id="kMH-Ou-2Mk"/>
+                <constraint firstAttribute="bottom" secondItem="lUf-99-bNv" secondAttribute="bottom" constant="5" id="keS-4G-B0Y"/>
                 <constraint firstItem="gu1-kF-dCg" firstAttribute="top" secondItem="ibJ-Cv-juF" secondAttribute="bottom" constant="3" id="nQX-Ns-9tD"/>
                 <constraint firstItem="ibJ-Cv-juF" firstAttribute="leading" secondItem="wJy-6c-3JA" secondAttribute="leading" id="qGe-WS-HrR"/>
             </constraints>
             <size key="customSize" width="211" height="363"/>
             <connections>
+                <outlet property="likeButton" destination="lUf-99-bNv" id="Py4-0R-OFQ"/>
                 <outlet property="moviePosterImageView" destination="wJy-6c-3JA" id="sfE-Ta-g5P"/>
                 <outlet property="movieTitleLabel" destination="ibJ-Cv-juF" id="cPD-HV-csu"/>
                 <outlet property="releaseDateLabel" destination="CBF-LT-PaK" id="dnR-po-9lb"/>
@@ -72,4 +85,7 @@
             <point key="canvasLocation" x="187.02290076335876" y="153.16901408450704"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="heart" catalog="system" width="128" height="107"/>
+    </resources>
 </document>
