--- a/week2/SeSACWeek3/SeSACWeek3/Base.lproj/Main.storyboard
+++ b/week2/SeSACWeek3/SeSACWeek3/Base.lproj/Main.storyboard
@@ -482,6 +482,21 @@
             </objects>
             <point key="canvasLocation" x="130.53435114503816" y="2128.8732394366198"/>
         </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="gaQ-6O-YLn">
+            <objects>
+                <viewController storyboardIdentifier="DetailViewController" id="hF6-tf-ZMA" customClass="DetailViewController" customModule="SeSACWeek3" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Tos-KR-tNL">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="T0C-d7-y7j"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Nit-Ii-2sS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="987" y="2129"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="g3z-u6-IZS">
             <objects>
